# HTTPServer

./: CMakeLists.txt  README.md  consumer.cpp
lib/: BasicHttpServer.cpp  BasicHttpServer.h  Connection.cpp  Connection.h  ConnectionPool.cpp  ConnectionPool.h  FDescriptor.cpp  FDescriptor.h  FileServer.cpp  FileServer.h  Listener.cpp  Listener.h  MiddlewareChain.cpp  MiddlewareChain.h  ReqHandlerTypes.h  Request.cpp  Request.h  Response.cpp  Response.h  StringConvert.h
lib/BufferedParsers/: BufferedBodyParser.cpp  BufferedBodyParser.h  BufferedHeaderParser.cpp  BufferedHeaderParser.h  BufferedReqLineParser.cpp  BufferedReqLineParser.h  BufferedRequestParser.cpp  BufferedRequestParser.h  ParseResult.cpp  ParseResult.h
public/: test.css  test.html  test.js
